<resources>
    <string name="app_name">Citybility</string>
    <string name="cs_title_tab1">CityShops</string>
    <string name="cs_title_tab2">CityShops vicini</string>
    <string name="cs_title_tab3">CityShops recenti</string>
    <string name="cs_title_tab4">Categorie CityShops</string>
    <string name="cs_support">Supporta: %1s</string>
    <string name="prj_title_tab1">Iniziative</string>
    <string name="prj_title_tab2">Iniziative vicine</string>
    <string name="prj_title_tab3">Iniziative recenti</string>
    <string name="action_search">Cerca</string>
    <string name="search_hint">Cerca</string>
    <string name="action_notifiche">Notifiche</string>
    <string name="title_activity_citybility_base">CitybilityBaseActivity</string>
    <string name="text_separator1">-</string>
    <string name="btn_campagne">CityShops</string>
    <string name="btn_no_profit">Iniziative</string>
    <string name="btn_citybiliter">Citybiliter</string>
    <string name="btn_profilo">Profilo</string>
    <string name="btn_send">Invia</string>
    <string name="btn_cancel">Annulla</string>
    <string name="btn_refresh">Riprova</string>
    <string name="btn_network_conf">Impostazioni</string>
    <string name="btn_end">Fine</string>
    <string name="dummy_num_0">0</string>
    <string name="dummy_num_1">3</string>
    <string name="dummy_num_2">42</string>
    <string name="dummy_num_3">369</string>
    <string name="dummy_date">21/01/2015</string>
    <string name="dummy_time">12:06</string>
    <string name="dummy_datetime">21/01/2015 12:06</string>
    <string name="dummy_text_s">Lorem</string>
    <string name="dummy_text_m">Lorem ipsum dolor sit amet</string>
    <string name="dummy_text_l">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</string>
    <string name="dummy_text_xl">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </string>
    <string name="dummy_text_xxl">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet.</string>
    <string name="title_activity_campaign_detail">Campagna</string>
    <string name="title_activity_category_detail">Campagne</string>
    <string name="follow">Segui</string>
    <string name="unfollow">Non seguire più</string>
    <string name="share">Condividi</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="default_photo">Foto</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="welcome_text">Benvenuto su Citybility</string>
    <string name="btn_sign_up">Iscriviti</string>
    <string name="btn_sign_in">Accedi</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_relogin">Relogin</string>
    <string name="login_info">Accedi a Citybility inserendo i tuoi dati</string>
    <string name="login_account_question">Non hai un account?</string>
    <string name="login_account_action">Crealo in pochi secondi</string>
    <string name="login_password_question">password dimenticata?</string>
    <string name="login_email">eMail</string>
    <string name="login_email_hint">mario@sito.com</string>
    <string name="login_password">Password</string>
    <string name="login_password_hint">la tua password</string>
    <string name="password_forgotten">Password Dimenticata?</string>
    <string name="password_forgotten_title">Password Dimenticata?</string>
    <string name="password_forgotten_info1">Inserisci l\'eMail utilizata per la registrazione.</string>
    <string name="password_forgotten_info2">Ti invieremo le istruzioni per reimpostare in pochi secondi la password</string>
    <string name="password_forgotten_request_sent">Le istruzioni di recupero password sono state inviate all\'indirizzo email di registrazione.</string>
    <string name="title_activity_register">Registrazione</string>
    <string name="reg_create_new_profile">Oppure crea un nuovo profilo:</string>
    <string name="reg_choose_profile_photo">Scegli una foto profilo</string>
    <string name="reg_profile_photo">Scegli una foto profilo</string>
    <string name="reg_name">Nome</string>
    <string name="reg_name_hint">Mario</string>
    <string name="reg_surname">Cognome</string>
    <string name="reg_surname_hint">Rossi</string>
    <string name="reg_email">eMail</string>
    <string name="reg_email_hint">mario@sito.com</string>
    <string name="reg_password">Password</string>
    <string name="reg_re_password">Password</string>
    <string name="reg_password_hint">la tua password</string>
    <string name="reg_re_password_hint">conferma password</string>
    <string name="reg_birth_date">Data di nascita</string>
    <string name="reg_birth_date_hint">01/01/1980</string>
    <string name="reg_phone">Telefono</string>
    <string name="reg_phone_hint">Opzionale</string>
    <string name="reg_gender">Sesso</string>
    <string name="reg_male">M</string>
    <string name="reg_female">F</string>
    <string name="reg_other">Altro</string>
    <string name="reg_other_hint">Opzionale</string>
    <string name="reg_success_msg">Registrazione avvenuta con successo.</string>
    <string name="reg_cb_policy_title">Privacy Policy</string>
    <string name="btn_registration">Iscriviti</string>
    <string name="reg_agreements_info">Cliccando su \"Iscriviti\" accetti termini del servizio e informativa sulla pirvacy.</string>
    <string name="title_activity_project">Iniziative vicine a te</string>
    <string name="title_activity_project_detail">Dettaglio iniziativa</string>
    <string name="prj_support_through">Supporta questa iniziativa da:</string>
    <string name="distance_from_here">%1$s da qui</string>
    <string name="date_from_to">Da %1$s a %2$s</string>
    <string name="citibiliters_num">%1$d partecipanti</string>
    <string name="donated_amount">%1$d€ donati fin\'ora</string>
    <string name="donated_and_total">%1$s€ su %2$s€</string>
    <string name="error">Errore</string>
    <string name="citybiters_list_title">Citibiliters</string>
    <string name="cbl_more_active">Più attivi</string>
    <string name="cbl_same_city">Nella mia città</string>
    <string name="cb_active_from">Attivo dal %1s</string>
    <string name="cb_following">Following</string>
    <string name="cb_follower">Follower</string>
    <string name="cb_purchased">Acquisti registrati</string>
    <string name="cb_donated">Donati</string>
    <string name="cb_supported_prj">Cause supportate</string>
    <string name="cb_positive_feedback">Feedback positivi</string>
    <string name="title_activity_citybiliter">Citybiliter</string>
    <string name="title_activity_citybiliter_detail">Dettaglio Citybiliter</string>
    <string name="title_activity_profile">Profilo e Account</string>
    <string name="prf_modify">Modifica</string>
    <string name="prf_settings">Impostazioni</string>
    <string name="prf_logout">Logout</string>
    <string name="title_activity_purchase_registration">Registra acquisto</string>
    <string name="qrc_action">Inquadra il QrCode</string>
    <string name="qrc_sub_action">per registrare il tuo acquisto e fare del bene.</string>
    <string name="qrc_offline_question"><b>Sei offline?</b> La registrazine verrà inviata in seguito</string>
    <string name="qrc_manual_code_typing">Scansione difficoltosa? Inserisci il codice manualmente.</string>
    <string name="qrc_invalid_msg">Codice non valido</string>
    <string name="qrc_error_msg">Si è verificato un errore nella lettura del codice</string>
    <string name="qrcm_info_main">Inserimento manuale</string>
    <string name="qrcm_info_sub">Se hai problemi con la scansione del qrcode, inserisci manualmente il codice location di 6 cifre</string>
    <string name="tk_info_main">Sei presso %1$s</string>
    <string name="tk_info_sub"><b>Inserisci il pin</b> fornito dall\'esercente per completare la registrazione e sbloccare la donazione</string>
    <string name="title_activity_code_submitted"><![CDATA[Grazie %1$s]]></string>
    <string name="csb_info"><![CDATA[<b>%1$s</b> farà una donazione a <b>%2$s</b> con lo scopo di finanziare <b>%3$s</b>]]></string>
    <string name="csb_feedback_question">Problemi prima o durante la transazione?</string>
    <string name="csb_feedback_ok">Tutto bene!</string>
    <string name="csb_feedback_ko">Qualche problema</string>
    <string name="csb_null_feedback_msg">E\' necessario dare un feedback.</string>
    <string name="csb_null_feedback_comment_msg">E\' necessario motivare la scelta.</string>
    <string name="csb_comment_hint">Motiva la scelta: il commento rimarrà privato</string>
    <string name="csb_share_question">Rendi pubblica la donazione?</string>
    <string name="csb_share_question_info">Clicca se vuoi che sia visibile nella app.</string>
    <string name="csb_share">Condividi donazione</string>
    <string name="csb_share_text">%1$s farà una donazione a "%2$s" con lo scopo di finanziare "%3$s"</string>
    <string name="csb_share_success_msg">%1$s farà una donazione a "%2$s" con lo scopo di finanziare "%3$s"</string>
    <string name="csb_close">Chiudi</string>
    <string name="title_activity_notification_list">Lista Notifiche</string>
    <string name="title_activity_notification_detail">Notifica</string>
    <string name="title_facebook_login">Accesso a Facebook</string>
    <string name="sharing_progress_dialog_text">Condivisione in corso...</string>
    <string name="sharing_unaspected_error_msg">Errore inaspettato da Facebook</string>
    <string name="sharing_success_msg">Codivisione effettuata con successo</string>
    <string name="prj_follow_success_msg">Da oggi segui l\'iniziativa "<b>%1$s</b>"</string>
    <string name="cs_follow_success_msg">Da oggi segui il CityShop "<b>%1$s</b>"</string>
    <string name="cb_follow_success_msg">Da oggi segui il Citibiliter "<b>%1$s</b>"</string>
    <string name="prj_unfollow_success_msg">Hai smessso di seguire l\'iniziativa "<b>%1$s</b>"</string>
    <string name="cs_unfollow_success_msg">Hai smessso di seguire il CityShop "<b>%1$s</b>"</string>
    <string name="cb_unfollow_success_msg">Hai smessso di seguire il Citibiliter "<b>%1$s</b>"</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Impossibile completare l\'operazione per mancanza di accettazione dei permessi.</string>
    <string name="ok">OK</string>
    <string name="accept">Accetto</string>
    <string name="msg_success">Operazione effettuata</string>
    <string name="fb_publish_success_msg">Condivisione effettuata con successo.</string>
    <string name="fb_publish_cancelled_msg">Condivisione anullata.</string>
    <string name="msg_error">Errore</string>
    <string name="server_error_msg">Si è verificato un errore.\nRiprovare più tardi</string>
    <string name="intro_slide_4_row_1">Trova i negozi e i ristoranti "buoni" vicino a te,</string>
    <string name="intro_slide_4_row_2">Certifia i tuoi acquisti in pochi secondi.</string>
    <string name="intro_slide_4_row_3">Il commerciante donerà parte del denaro ad una no-profit.</string>
</resources>