<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@drawable/bottom_border2"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textSize="22dp"
        android:textColor="@color/citybility_light_gray_text"
        android:text="@string/password_forgotten_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:textSize="14dp"
        android:textColor="@color/citybility_light_gray_text"
        android:text="@string/password_forgotten_info1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        android:textSize="14dp"
        android:textColor="@color/citybility_light_gray_text"
        android:text="@string/password_forgotten_info2" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="60dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:background="@drawable/bottom_border2" >

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="15dp"
            android:text="@string/login_email"
       		android:textColor="@color/citybility_light_gray_text"
            android:textSize="16dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:textColor="@color/citybility_light_gray_text"
            android:textStyle="normal"
            android:textSize="17dp"
            android:text="@string/btn_cancel" />

        <View 
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/lineColor1"/>
        
        <Button
            android:id="@+id/btnSend"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:textColor="@color/citybility_green"
            android:textStyle="bold"
            android:textSize="17dp"
            android:text="@string/btn_send" />
    </LinearLayout>

</LinearLayout>