<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.citybility.app"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@android:color/white" >

    <com.citybility.app.custom.RoundedImageView
        android:id="@+id/prjThumbnail"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/default_photo"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/photo_default"
        custom:border_width="0dp"
        custom:border_radius="3dp"
        custom:shape="rectangular" />

    <TextView
        android:id="@+id/prjName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/prjThumbnail"
        android:layout_toRightOf="@id/prjThumbnail"
        android:layout_marginTop="-5dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/dummy_text_xl"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/activityName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@id/prjThumbnail"
        android:layout_toRightOf="@id/prjThumbnail"
        android:layout_below="@+id/prjName"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/dummy_text_m"
        android:textSize="14dp" />

    <View
        android:id="@+id/prjLineSeparator"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/activityName"
        android:layout_toEndOf="@id/prjThumbnail"
        android:layout_toRightOf="@id/prjThumbnail"
        android:background="@color/lineColor2" />

    <LinearLayout
        android:id="@+id/prjInfoSecondLine"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/prjLineSeparator"
        android:layout_toEndOf="@id/prjThumbnail"
        android:layout_toRightOf="@id/prjThumbnail" >

        <ImageView
            android:id="@+id/prjDistanceIcon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="start|center"
            android:contentDescription="geo"
            android:src="@drawable/elenchi_geo_icon" />

        <TextView
            android:id="@+id/prjDistanceInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:layout_gravity="start|bottom"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:ellipsize="none"
            android:singleLine="true"
            android:text="@string/dummy_text_s"
            android:textSize="14dp" />

        <ImageView
            android:id="@+id/prjLikeIcon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="start|center"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:contentDescription="Heart"
            android:src="@drawable/elenchi_citybiliter_icon" />

        <TextView
            android:id="@+id/prjLikeInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:ellipsize="none"
            android:singleLine="true"
            android:text="@string/dummy_text_s"
            android:textSize="14dp" />
    </LinearLayout>

</RelativeLayout>