<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:layout_margin="0dp"
    android:background="@android:color/white" >

    <RelativeLayout
        android:id="@+id/slideTextCnt"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="vertical">
         
        <ImageView
            android:id="@+id/slide4Img"
            android:layout_width="83dp"
            android:layout_height="240dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="0dp"
            android:background="@android:color/white"
            android:padding="0dp"
            android:src="@drawable/intro_slide_4_img"
            android:adjustViewBounds="true" />
        
        <TextView
	        android:id="@+id/row1"
	        android:layout_width="match_parent"
	        android:layout_height="80dp"
            android:layout_alignParentTop="true"
			android:layout_gravity="center"
			android:gravity="center"
            android:layout_marginLeft="100dp"
			android:text="@string/intro_slide_4_row_1"
			android:textColor="@color/citybility_light_gray_text"
			android:textSize="15sp"
         />
      
        <TextView
	        android:id="@+id/row2"
	        android:layout_width="match_parent"
	        android:layout_height="80dp"
			android:layout_gravity="center"
			android:gravity="center"
            android:layout_marginLeft="90dp"
			android:layout_below="@id/row1"
			android:text="@string/intro_slide_4_row_2"
			android:textColor="@color/citybility_light_gray_text"
			android:textSize="15sp"
         /> 
        <TextView
	        android:id="@+id/row3"
	        android:layout_width="match_parent"
	        android:layout_height="80dp"
			android:layout_gravity="center"
			android:gravity="center"
            android:layout_marginLeft="100dp"
			android:layout_below="@id/row2"
			android:text="@string/intro_slide_4_row_3"
			android:textColor="@color/citybility_light_gray_text"
			android:textSize="15sp"
         />
        


    </RelativeLayout>
    
    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@id/slideTextCnt"
        android:layout_centerHorizontal="true"
	    android:padding="0dp"
	    android:layout_margin="0dp"
        android:src="@drawable/intro_background_tiled"
        android:background="@android:color/white"
        android:scaleType="centerCrop" 
        android:baselineAlignBottom="true"/>
   

   <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_bordered" />
</RelativeLayout>
